feature: 체크리스트 초안 저장에서 위험도 제외